src/objects/Exam__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact lookup</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Exams</relationshipLabel>
        <relationshipName>Exams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <formula>Contact__r.Client_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exam_Date__c</fullName>
        <formula>Exam_Schedule__r.Exam_Date__c</formula>
        <label>Exam Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exam_Location__c</fullName>
        <formula>Exam_Schedule__r.Exam_Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exam Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exam_Schedule__c</fullName>
        <inlineHelpText>Date that exam is scheduled</inlineHelpText>
        <label>Exam Schedule</label>
        <referenceTo>Exam_Schedule__c</referenceTo>
        <relationshipLabel>Exams</relationshipLabel>
        <relationshipName>Exams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Exam_Time__c</fullName>
        <formula>Exam_Schedule__r.Time_of_Exam__c</formula>
        <label>Exam Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Exam_Type__c</fullName>
        <label>Exam Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UDC Construction Inspector Exam</fullName>
                </value>
                <value>
                    <fullName>UDC Electrical Inspector Exam</fullName>
                </value>
                <value>
                    <fullName>UDC HVAC Inspector Exam</fullName>
                </value>
                <value>
                    <fullName>UDC Plumbing Inspector Exam</fullName>
                </value>
                <value>
                    <fullName>Soil Tester Part 1</fullName>
                </value>
                <value>
                    <fullName>Soil Tester Part 2</fullName>
                </value>
                <value>
                    <fullName>Soil Tester Exam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exam_length__c</fullName>
        <description>Exam length</description>
        <label>Exam length</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Exam_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Exam_Length</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Id of the record</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Source__c</fullName>
        <description>External Source System from which this data is converted</description>
        <encryptionScheme>None</encryptionScheme>
        <label>External Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Historical_Exam_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Historical Exam Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>License lookup</description>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Exams</relationshipLabel>
        <relationshipName>Exams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Military_Waiver__c</fullName>
        <formula>License__r.Military_Waiver__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Military Waiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Packet__c</fullName>
        <description>Packet</description>
        <label>Packet</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Exam_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Packet</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Permit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Permit lookup</description>
        <label>Permit</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipLabel>Exams</relationshipLabel>
        <relationshipName>Exams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Release</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Application</label>
        <referenceTo>Renewal_Application__c</referenceTo>
        <relationshipLabel>Exams</relationshipLabel>
        <relationshipName>Exams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <description>Exam result</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service Request</description>
        <label>Service Request</label>
        <referenceTo>MUSW__Application2__c</referenceTo>
        <relationshipLabel>Exams</relationshipLabel>
        <relationshipName>Exams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Accommodation_Request__c</fullName>
        <description>Special Accommodation Request</description>
        <formula>IF( License__c != null, License__r.Special_Accommodation_Request__c , IF(Service_Request__c != null, Service_Request__r.Special_Accommodation_Request__c , IF( Renewal_Application__c != null, Renewal_Application__r.Special_Accommodation_Request__c , null) ) )</formula>
        <label>Special Accommodation Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status of the Exam</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Exam_Status</valueSetName>
        </valueSet>
    </fields>
    <label>Exam</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Exam_Type__c</columns>
        <columns>Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Current_Exams</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>License__c</columns>
        <columns>Status__c</columns>
        <columns>Exam_Type__c</columns>
        <columns>Exam_Date__c</columns>
        <columns>Exam_Time__c</columns>
        <columns>Exam_Schedule__c</columns>
        <columns>Exam_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Exam_Schedule__c</field>
            <operation>notContain</operation>
            <value>Historical</value>
        </filters>
        <label>Current Exams</label>
    </listViews>
    <listViews>
        <fullName>Historical_Exams</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>License__c</columns>
        <columns>Status__c</columns>
        <columns>Exam_Type__c</columns>
        <columns>Exam_Date__c</columns>
        <columns>Exam_Time__c</columns>
        <columns>Exam_Schedule__c</columns>
        <columns>Exam_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Exam_Schedule__c</field>
            <operation>contains</operation>
            <value>Historical</value>
        </filters>
        <label>Historical Exams</label>
    </listViews>
    <nameField>
        <displayFormat>EX-{YY}{MM}{0000}</displayFormat>
        <label>Exam Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Seat_Unavailable</fullName>
        <active>true</active>
        <errorConditionFormula>Exam_Schedule__r.Seats_Available__c  = 0</errorConditionFormula>
        <errorMessage>There are no seats available for this Exam Schedule</errorMessage>
    </validationRules>
</CustomObject>